# masterclass_agentes

./: 01_intro.ipynb  02_herramientas.ipynb  03_memoria.ipynb  04_hil.ipynb  README.md  agente.py  chatbot.py  hil.py  memoria.py  pyproject.toml  tools.py
